--- a/WebSite1/GamePage.html
+++ b/WebSite1/GamePage.html
@@ -6,8 +6,11 @@
     <title></title>
 </head>
 <body>
-    <h1>Game Title</h1>
-    <button type="button"> Start</button> <!-- Making start button-->
+    <audio controls autoplay>   <!--Tried to add audio could not figure it out yet-->
+        <source src= " https://opengameart.org/content/heroic-demise-updated-version" type= "audio/mp3" />
+    </audio>
+    <h1>Spell and Blade</h1>
+    <a href="#" class="button-3d">Start</a> <!-- Making start button-->
     <h2>Developed by:</h2>>
     <ul>
         <li>Dustin Branch</li>
