--- a/WebSite1/GamePage.html
+++ b/WebSite1/GamePage.html
@@ -16,6 +16,7 @@
     <audio controls autoplay>   <!--Tried to add audio could not figure it out yet-->
         <source src= " https://opengameart.org/content/heroic-demise-updated-version" type= "audio/mp3" />
     </audio>
+    <canvas id="landscapeCanvas"></canvas>
     <canvas id="characterCanvas"></canvas>
     <div id="startScreen">
         <h1>Spell and Blade</h1>
