added audio. changed the location of the music file into the file with the webpage and changed the name to one word.

--- a/WebSite1/GamePage.html
+++ b/WebSite1/GamePage.html
@@ -13,8 +13,9 @@
     </script>
 </head>
 <body>
-    <audio controls autoplay>   <!--Tried to add audio could not figure it out yet-->
-        <source src= " https://opengameart.org/content/heroic-demise-updated-version" type= "audio/mp3" />
+    <audio controls>  
+        <source src="HeroicDemise.mp3" type= "audio/mp3">
+        Your browser does not support the audio element
     </audio>
     <canvas id="gameCanvas" width="400" height="400"></canvas>
     <div id="startScreen">
