Moved all of style sheet code into another style sheet to fix why we couldn't adjust any CSS. -Dustin

--- a/WebSite1/GamePage.html
+++ b/WebSite1/GamePage.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     
-    <link href="StyleSheet.css" rel="stylesheet" type="text/css">
+    <link href="StyleSheetV2.css" rel="stylesheet" type="text/css">
     
     <title></title>
     <script>
@@ -13,11 +13,11 @@
     </script>
 </head>
 <body>
-    <audio controls>  
+    <audio autoplay>  
         <source src="HeroicDemise.mp3" type= "audio/mp3">
         Your browser does not support the audio element
     </audio>
-    <canvas id="gameCanvas" width="400" height="400"></canvas>
+    <canvas id="gameCanvas" width="3000" height="3000"></canvas>
     <div id="startScreen">
         <h1>Spell and Blade</h1>
         <button id="startButton">Start</button>
