--- a/WebSite1/GamePage.html
+++ b/WebSite1/GamePage.html
@@ -2,9 +2,9 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    
+
     <link href="StyleSheetV2.css" rel="stylesheet" type="text/css">
-    
+
     <title></title>
     <script>
         function openWin() {
@@ -13,8 +13,8 @@
     </script>
 </head>
 <body>
-    <audio autoplay>  
-        <source src="HeroicDemise.mp3" type= "audio/mp3">
+    <audio autoplay>
+        <source src="HeroicDemise.mp3" type="audio/mp3">
         Your browser does not support the audio element
     </audio>
     <canvas id="gameCanvas" width="3000" height="3000"></canvas>
@@ -26,8 +26,9 @@
             <!-- Pop-up window content -->
             <div class="popUpWindow-content">
                 <span class="close">&times;</span>
-                <p>Please select a character type that best fits your play style.
-                   The character type you choose will be the character you control!
+                <p>
+                    Please select a character type that best fits your play style.
+                    The character type you choose will be the character you control!
                 </p>
                 <div id="characterButtons">
                     <button class="tank" onclick="createCanvas(1);openWin()">Tank</button>
@@ -36,12 +37,14 @@
                 </div>
             </div>
         </div>
-        <h2>Developed by:</h2>>
+        <h2>
+            Developed by:
+        </h2>
         <ul>
             <li>Dustin Branch</li>
             <li>Christopher Coats</li>
-            <li>Sara Williams</li>
             <li>Ryan DeBlanc</li>
+            <li>Sara Williams</li>
         </ul>
     </div>
     <script src="CharacterClass.js"></script>
