changed it to where when the button is clicked then it opens on the same page not a new window

--- a/WebSite1/GamePage.html
+++ b/WebSite1/GamePage.html
@@ -8,7 +8,7 @@
     <title></title>
     <script>
         function openWin() {
-            window.open("GameWindow.html")
+            window.location.replace("GameWindow.html")
         }
     </script>
 </head>
@@ -31,9 +31,9 @@
                     The character type you choose will be the character you control!
                 </p>
                 <div id="characterButtons">
-                    <button class="tank" onclick="createCanvas(1);openWin()">Tank</button>
-                    <button class="wizard" onclick="createCanvas(2);openWin()">Wizard</button>
-                    <button class="elf" onclick="createCanvas(3);openWin()">Elf</button>
+                    <button class="tank" onclick="openWin();createCanvas(1)">Tank</button>
+                    <button class="wizard" onclick="openWin();createCanvas(2)">Wizard</button>
+                    <button class="elf" onclick="openWin();createCanvas(3)">Elf</button>
                 </div>
             </div>
         </div>
