--- a/WebSite1/GameWindow.html
+++ b/WebSite1/GameWindow.html
@@ -23,7 +23,7 @@
         var myLeftBtn;
         var myRightBtn;
 
-        function startGame() {
+       // function startGame() {
             myGamePiece = new component(100, 100, "white", 400, 300);
             myUpBtn = new component(30, 30, "black", 100, 10);
             myDownBtn = new component(30, 30, "black", 100, 70);
