Had to revert because something screwed up in the commit- Chris

--- a/WebSite1/GamePage.html
+++ b/WebSite1/GamePage.html
@@ -8,10 +8,10 @@
     <title></title>
 </head>
 <body>
-    <audio autoplay>
+    <!--<audio autoplay>
         <source src="HeroicDemise.mp3" type="audio/mp3">
         Your browser does not support the audio element
-    </audio>
+    </audio>-->
     <div id="startScreen">
         <h1>Spell and Blade</h1>
         <button id="startButton">Start</button>
