Worked on a base model for the math and logic that goes into the combat system (work in progress), tried to make a battle guide (text that guides player through combat), and finally changed the tank button to display "Knight" instead to keep consistency in the names of our characters.-Dustin

--- a/WebSite1/GamePage.html
+++ b/WebSite1/GamePage.html
@@ -25,7 +25,7 @@
                     The character type you choose will be the character you control!
                 </p>
                 <div id="characterButtons">
-                    <button id="tank" onclick="startGame(1)">Tank</button>
+                    <button id="knight" onclick="startGame(1)">Knight</button>
                     <button id="wizard" onclick="startGame(2)">Wizard</button>
                     <button id="elf" onclick="startGame(3)">Elf</button>
                 </div>
