Updated the render function to look a lot cleane. Drawing is done through function calls based on objects.-Dustin

--- a/WebSite1/GamePage.html
+++ b/WebSite1/GamePage.html
@@ -25,9 +25,9 @@
                     The character type you choose will be the character you control!
                 </p>
                 <div id="characterButtons">
-                    <button id="knight" onclick="startGame(1)">Knight</button>
-                    <button id="wizard" onclick="startGame(2)">Wizard</button>
-                    <button id="elf" onclick="startGame(3)">Elf</button>
+                    <button id="knight" onclick="startGame('knight')">Knight</button>
+                    <button id="wizard" onclick="startGame('wizard')">Wizard</button>
+                    <button id="elf" onclick="startGame('elf')">Elf</button>
                 </div>
             </div>
         </div>
